{
    "name": "InputController",
    "maps": [
        {
            "name": "BasicGamePad",
            "id": "845dabc9-fda6-4dec-a6d1-4601dca99576",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "b22c3815-84e0-4ab6-9b9b-c1d40b9700f2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DPadDown",
                    "type": "Button",
                    "id": "13ba8871-bc90-4d00-874a-a41f5e6a8dbf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DPadUp",
                    "type": "Button",
                    "id": "8197d4fd-a743-4e33-b108-c82b200abd32",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DPadRight",
                    "type": "Button",
                    "id": "d771ad80-05f2-40e5-bf2a-e42044a26089",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DPadLeft",
                    "type": "Button",
                    "id": "a87edf8b-ee6f-4f4d-979a-5795f5ddb32a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Start",
                    "type": "PassThrough",
                    "id": "ccb518e1-cd51-4b5d-9e4e-ff2967d53cb8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Select",
                    "type": "PassThrough",
                    "id": "7f1f3a3c-1738-431e-b477-3437600ebcf9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightStickPress",
                    "type": "PassThrough",
                    "id": "3a3dd17b-1ee6-45d7-a9c9-a6daa907af63",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftStickPress",
                    "type": "PassThrough",
                    "id": "c518be3a-16b0-49e4-b0a2-d755be4b6c5c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightTrigger",
                    "type": "PassThrough",
                    "id": "a6a369e4-3beb-4f6b-8a78-f92bd432ee81",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftTrigger",
                    "type": "PassThrough",
                    "id": "1eead6a3-2587-4b2f-a1e7-144e3773f108",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightShoulder",
                    "type": "PassThrough",
                    "id": "c0cd0215-8167-4ec1-b699-5499f7ef6637",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftShoulder",
                    "type": "PassThrough",
                    "id": "27b17b7b-c8c4-4ad6-b5bb-fe6a03c73b5b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "West",
                    "type": "PassThrough",
                    "id": "d667a8a8-7bc1-41f1-97b5-769673764b0d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "East",
                    "type": "PassThrough",
                    "id": "dbd58edb-4270-4ca6-9bdc-f5cc4bf86e1e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "South",
                    "type": "PassThrough",
                    "id": "01ce38b1-04f8-4b83-b525-486687d9adff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "North",
                    "type": "PassThrough",
                    "id": "712312af-b90c-4023-ac75-e32f355f5657",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotate",
                    "type": "PassThrough",
                    "id": "08b81385-2879-4add-ba13-b2b39d858574",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "ea22e6b8-ab88-4478-97fe-bda7e6a306cf",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ee9a2649-ab43-436c-a0c3-58c37d580bdc",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "5bf1f1fa-cfaf-4c04-9895-1bb384788615",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "61d3070f-1a8f-4a9f-b4a6-3974f7b422ee",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e9c23ba2-d411-47a0-a8c1-d686fb06404d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5e0d9fba-43f7-42bf-b0a3-b2dc5ea4f18a",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f44a1e15-adca-4cb3-a626-a01352855953",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "403b1488-adeb-4b1f-b479-6d24b0f305eb",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db2e24a3-fd1b-42c8-a6c2-b1e0385c5cdd",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "North",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "10d0da2a-59de-48b0-931c-39bcb2b93c45",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "South",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3b71b29b-7694-4b2b-a7d1-eb2390eda814",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "South",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bee6dd13-9971-4389-98a1-2916682e6045",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "East",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6f531e9c-7a9e-4787-9130-3c664f91c70c",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "East",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "602fefed-3aee-4e15-9c28-d8b5f81610ac",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "West",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e3c3621-1cb7-40ed-aef0-6c8164faee20",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftShoulder",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "afca3661-cd01-42d3-b35c-1af95ed29083",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightShoulder",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f600b8cc-9720-4fda-ac64-fda173659d4d",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3587ae7e-0601-4d2c-bdbb-1ade5db482a8",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3aa6c90a-6853-457f-a0d6-596557f0dd07",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStickPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "236c238e-6689-4e8c-93eb-56a6e578fe4f",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStickPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4f2e3ee-6c18-4ed9-8f02-12f1b28351ce",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "874a10a7-335c-41fd-bae0-6380391467af",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Start",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5cb176a-20e8-4fb3-bd39-bdb38ddac6bb",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPadLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e09567ca-86f0-4684-94ab-9d979924ebf4",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPadRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ebac257-b221-4f61-8d60-90c99304cdd2",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPadUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8de3cf5a-a7ad-434d-93ac-56a474ddd150",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPadDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}